Fixed BoardsMenu boards overflow

--- a/src/components/BoardsMenu/css/BoardContextMenu.scss
+++ b/src/components/BoardsMenu/css/BoardContextMenu.scss
@@ -1,13 +1,13 @@
 .board-context-menu{
     position: absolute;
-    right: -5%;
+    right: 10%;
     top: 70%;
 
     padding: 5px 0;
 
     background-color: #1f1f1f;    
 
-    border-radius: 0 5px 5px 5px;
+    border-radius: 5px 0 5px 5px;
 
     z-index: 2;
 }
